--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
     "comparaison"
   ],
   "author": "Pierre Georgel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "typescript": "^5.4.2",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2",
+    "ts-loader": "^9.5.1",
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.4",
+    "css-loader": "^6.10.0"
+  }
 }
