--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "ts-loader": "^9.5.1",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
-    "css-loader": "^6.10.0"
+    "css-loader": "^6.10.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2"
   }
 }
